<resources>
    <string name="app_name">MQTT</string>

    <string name="ip">IP Address</string>


    <string name="port">Port Number</string>

    <string name="clientid">Client_ID</string>

    <string name="help">This app is designed and implemented by Dr.Jingtao Sun. If you have any questions, plz connect to the following email address: sun at nii.ac.jp.</string>


    <string name="video_ori"> Original video</string>
    <string name="video_pro"> Processed video</string>

    <string name="title_activity_my_application">MyApplication</string>
    <string name="title_activity_publish">Publish</string>
    <string name="title_activity_subscribe">Subscribe</string>

    <string name="title_activity_sensor">SensorActivity</string>
    <string name="title_activity_sensor_list">SensorListActivity</string>
    <string name="title_activity_gpssensor">GPSSensorActivity</string>
    <string name="description">camera picture</string>
    <string name="title_activity_accelerometer_sensor">AccelerometerSensorActivity</string>
    <string name="title_activity_temperature_sensor">TemperatureSensorActivity</string>
    <string name="title_activity_niisimmain">NIISIMMainActivity</string>
    <string name="title_activity_niimain">NIIMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_result">Result</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="set_fragment">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="result_fragment">Result</string>

    <string name="detail">Detail</string>
    <string name="publish">Publish</string>

    <string name="sinetstream">SINETStream</string>
    <string name="title_activity_sensor_detail">SensorDetailActivity</string>
    <string name="save">Save</string>
    <string name="qos">Qos</string>
    <string name="retained">Retained</string>
    <string name="title_topic">Topic: </string>
    <string name="title_sensor_type">Type: </string>

    <string-array name="sensor_topics">
        <item>mqtt-android-video</item>
        <item>mqtt-android-light</item>
        <item>mqtt-android-accelerometer</item>
        <item>mqtt-android-temperature</item>
        <item>mqtt-android-GPS</item>
    </string-array>


    <string-array name="sensor_types">
        <item>sensor-video</item>
        <item>sensor-list</item>
        <item>sensor-image</item>
    </string-array>

    <string-array name="sensor_qos">
        <item>1</item>
        <item>0</item>
        <item>2</item>
        <item>3</item>
    </string-array>

</resources>
