<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".demo.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/home_fragment" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/ip_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip"
            app:layout_constraintBaseline_toBaselineOf="@+id/ip_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/port_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port"
            app:layout_constraintBaseline_toBaselineOf="@+id/clientid_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/clientid_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="189dp"
            android:text="@string/clientid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginBottom="37dp"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:text="192.168.2.105"
            app:layout_constraintBottom_toTopOf="@+id/clientid_msg"
            app:layout_constraintStart_toEndOf="@+id/ip_msg" />

        <EditText
            android:id="@+id/port_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:ems="10"
            android:inputType="number"
            android:text="1883"
            app:layout_constraintStart_toStartOf="@+id/ip_text"
            app:layout_constraintTop_toBottomOf="@+id/ip_text" />


        <EditText
            android:id="@+id/clientid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="number"
            android:text="client_test001"
            app:layout_constraintStart_toStartOf="@+id/port_text"
            app:layout_constraintTop_toBottomOf="@+id/port_text" />


        <Button
            android:id="@+id/connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="228dp"
            android:background="@color/colorAccent"
            android:text="Connecting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/disconnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="Disconnect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connect" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/help"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>